Refactor: 폴더 변경

--- a/frontend/src/main/resources/html/resume.html
+++ b/frontend/src/main/resources/html/resume.html
@@ -37,7 +37,7 @@
 		<tbody>
 		<tr>
 			<!-- 사진을 넣는 공간-->
-			<th rowspan="7" style="width: 250px; height: 280px;"><img src="./images/이순신.png" alt="이순신"
+			<th rowspan="7" style="width: 250px; height: 280px;"><img src="images순신.png" alt="이순신"
 			                                                          style="width: 200px"></th>
 		</tr>
 		<tr>
