--- a/frontend/src/main/resources/html/image.html
+++ b/frontend/src/main/resources/html/image.html
@@ -9,8 +9,8 @@
 <p><img src = "something" onerror = "this.src='https://s3.orbi.kr/data/file/united/2041631675_jVf7KvSa_4.jpg'"
         alt = "위대한 기타리스트 에릭클랩튼" title = "위대한 기타리스트 에릭클랩튼"/></p>
 
-<p><img src = "./images/image3.gif" title="기타" alt="기타"></p>
-<p><img src="./images/image4.png" title="투명 기타" alt="투명 기타"></p>
-<p><img src="./images/coffee.png" title="coffee" alt="coffee" width="300"></p>
+<p><img src = "imagesmage3.gif" title="기타" alt="기타"></p>
+<p><img src="imagesmage4.png" title="투명 기타" alt="투명 기타"></p>
+<p><img src="imagesoffee.png" title="coffee" alt="coffee" width="300"></p>
 </body>
 </html>
